# Aegis

./: .env.example  .gitignore  AGENTS.md  README.md  README_BOB_SECTION.md  REMEDIATION-PR.md  docker-compose.yml  findings.json  pyproject.toml  render.yaml  test_scanner.py
.bob/: custom_modes.yaml  mcp.json
.bob/rules-advanced/: AGENTS.md
.bob/rules-ask/: AGENTS.md
.bob/rules-auditor/: AGENTS.md  MODE_CONFIGURATION.md
.bob/rules-code/: AGENTS.md
.bob/rules-plan/: AGENTS.md
Aegis/: __init__.py  cli.py  database.py  mcp_server.py  models.py
Aegis/api/: __init__.py  main.py
Aegis/reporter/: __init__.py  json_export.py  pdf.py
Aegis/rules/: __init__.py  ac_1_access_control.py  ac_2_session_timeout.py  ac_3_authentication.py  au_1_audit_logs.py  base.py  en_1_encryption.py  in_1_integrity.py  tr_1_transmission.py
Aegis/scanner/: __init__.py  base.py  pattern_matcher.py  tree_sitter.py
bob_sessions/: bob_task_may-15-2026_3-09-13-pm.md  bob_task_may-15-2026_7-10-16-pm.md  bob_task_may-15-2026_7-35-39-pm.md  bob_task_may-15-2026_8-09-15-pm.md  bob_task_may-16-2026_10-04-35-pm.md  bob_task_may-16-2026_12-54-50-am.md  bob_task_may-16-2026_2-09-37-am.md  bob_task_may-16-2026_3-38-59-pm.md  bob_task_may-16-2026_8-21-57-pm.md  bob_task_may-16-2026_8-22-25-pm.md  bob_task_may-16-2026_8-22-46-pm.md  bob_task_may-16-2026_8-23-47-pm.md  bob_task_may-16-2026_8-24-03-pm.md
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
demo/patient-portal/: package.json  seed.sql  server.js
docs/: ARCHITECTURE.md  DEMO-SCRIPT.md  EXECUTIVE-SUMMARY.md  HIPAA-RULES.md  IMPLEMENTATION_SUMMARY.md
scripts/: run_audit.py  seed_demo.py  setup.py
tests/: test_cli.py  test_models.py
(+28 files in other folders)
