[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis"
version = "0.1.0"
description = "HIPAA compliance code auditor"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Aegis Contributors" }]
keywords = ["hipaa", "compliance", "security", "static-analysis", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "sqlalchemy>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "slowapi>=0.1.9",
    "reportlab>=4.0",
    "tree-sitter>=0.21",
    "tree-sitter-javascript>=0.21",
    "mcp>=0.9",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "httpx>=0.27",
]

[project.scripts]
aegis = "aegis.cli:main"

[project.urls]
Homepage = "https://github.com/aegis-hipaa/aegis"
Issues = "https://github.com/aegis-hipaa/aegis/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis*"]
exclude = ["tests*", "demo*", "dashboard*", "scripts*", "docs*", "bob_sessions*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
